2008-06-09  Jim Keniston  <jkenisto@us.ibm.com>

	PR 6601
	* tapsets.cxx: For powerpc, reject symbols in .opd
	(function descriptor) section.

2008-06-09  Stan Cox  <scox@redhat.com>

	* NEWS: Updated kernel.statement relative line number.
	* stapprobes.5.in: Likewise.

2008-06-09  David Smith  <dsmith@redhat.com>

	* tapsets.cxx
	(utrace_var_expanding_copy_visitor::visit_target_symbol): Calls
	'syscall_nr' to get the value of '$syscall'.

	* tapsets.cxx (utrace_derived_probe::join_group): Removed
	generated inclusion of tracehook.h.
	(utrace_var_expanding_copy_visitor::visit_target_symbol): Uses
	'_stp_arg(0)' to get value of '$syscall'.

2008-06-06  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (dwflpp::iterate_over_srcfile_lines): 
	Add parameter line_type_relative.  
	(enum line_t): New.
	(dwarf_query::line_type): New.
	(dwarf_query::parse_function_spec): Set line_type.

2008-06-06  David Smith  <dsmith@redhat.com>

	* NEWS: Updated utrace probes descriptions.
	* stapprobes.5.in: Ditto.

	* tapsets.cxx (enum utrace_derived_probe_flags): Redefined in
	terms of probe types instead of utrace events.
	(utrace_var_expanding_copy_visitor::visit_target_symbol): Uses new
	utrace_derived_probes_flags values.
	(utrace_builder::build): Handles new probe types and new
	utrace_derived_probes_flags values.
	(utrace_derived_probe_group::emit_probe_decl): Updated to handle
	new utrace_derived_probe_flags values.
	(utrace_derived_probe_group::emit_module_decls): Ditto.  Also
	correctly handles 'begin' events correctly by installing a quiesce
	handler (instead of running the probe directly).
	(register_standard_tapsets): Registers updated utrace probe
	types.

2008-06-05  Srinivasa DS <srinivasa@in.ibm.com>
	*configure,configure.ac: -fpie option puts limit on GOT size
	   and hence systemtap build fails on s390. So use -fPIE which
	   doesn't put limit on GOT size.

2008-06-04  Jim Keniston  <jkenisto@us.ibm.com>

	* testsuite/systemtap.context/num_args.{stp,tcl}: Added.