@@ -1,3 +1,8 @@
+2008-06-10  David Smith  <dsmith@redhat.com>
+
+	* tapsets.cxx (utrace_derived_probe_group::emit_probe_decl):
+	Initializes .vm_callback.
+
 2008-06-09  Jim Keniston  <jkenisto@us.ibm.com>
 
 	PR 6601
